# cheat-demo

./: .gitignore  CMakeLists.txt  library.cpp  library.h  load_dll.cpp  main.cpp
crackme/: test1.cpp
lib/dll/: dll-inject.cpp  dll-inject.h
lib/helper/: helper.cpp  helper.h
